--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.1.6",
+    "@tsparticles/react": "^3.0.0",
     "html2pdf.js": "^0.10.2",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-particles": "^2.12.2",
     "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
